fix quran horizontal scroll

--- a/css/main.less
+++ b/css/main.less
@@ -489,7 +489,7 @@ body {
 	}
 }
 
-.fill, .tafsir-text .active, .page {
+.fill, .tafsir-text .active, .page, .ayas {
 	padding: 0 10px;
 	margin: 0 -10px;
 }
